fix: Fixed bug where incorrect side of card would briefly be visible in review mode
Fixed bug where the other side of the next card (which ought to be hidden) was visible while the card is flipping over when "Show side of card" is set to "Front" or "Back"

Also added VSCode dev container settings to this branch.

--- a/src/script/card/card_display/CardDisplay.scss
+++ b/src/script/card/card_display/CardDisplay.scss
@@ -31,6 +31,10 @@
     transform: rotateY(-180deg);
 }
 
+.flashcard-face-no-animation {
+    transition: none !important;
+}
+
 
 @mixin -box-properties() {
     display: grid;
